[package]
name = "pye-cli"
version = "0.1.3"
edition = "2021"

[dependencies]
anchor-lang = { workspace = true }
anchor-client = { workspace = true, default-features = false, features = ["async"] }
borsh = "1.3"
clap = { version = "4", features = ["derive", "env"] }
chrono = "0.4.41"
dialoguer = "0.11"
pye-core-cpi = { workspace = true }
solana-account-decoder-client-types = "2.2.7"
solana-client = "2.2.7"
solana-commitment-config = "2.2.1"
solana-sdk = { version = "2.2.2", features = ["borsh"] }
solana-stake-program = { version = "2.2.7" }
solana-transaction-status-client-types= "2.2.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0.98"
thiserror = "2.0.12"
regex = "1.11.1" 
solana-metrics = "2.2.7"
env_logger = "0.11"
log = "0.4.27"